--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <header>
       <a class="brand" href="#">
         <div>
-          <b id="yourNameTop">Lagansivi</b><br/>
+          <b>Lagansivi</b><br/>
           <span class="small">CV & Job prep · Frontend / QA</span>
         </div>
       </a>
@@ -359,7 +359,7 @@
         <label for="links">Linkovi (CV, oglas, GitHub/portfolio)</label>
         <input id="links" name="links" placeholder="Nalepi linkove (Google Drive / GitHub / oglasi)" />
 
-        <label for="notes">Kratko: gde si zapao / cilj / rok</label>
+        <label for="notes">Kratko: gde si zapeo / cilj / rok</label>
         <textarea id="notes" name="notes" placeholder="npr. 3 meseca šaljem prijave, nema odgovora; ciljam FE Junior; želim gotov CV do petka."></textarea>
 
         <div class="ctaRow" style="margin-top:14px">
@@ -390,7 +390,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> <span id="yourNameBottom">Bojan Dimitrovski</span> · Pravljeno sa ❤ u Beogradu.
+      © <span id="year"></span> <span>Bojan Dimitrovski</span> · Pravljeno sa ❤ u Beogradu.
       <br/>
     </footer>
   </div>
