--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <div class="formRow">
             <div>
               <label for="role">Ciljana pozicija</label>
-              <div class="selctWrap">
+              <div class="selectWrap">
                 <select id="role" name="role" required>
                   <option value="" selected disabled>Izaberi…</option>
                   <option>Frontend (Junior)</option>
