--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
     .faq p{color:var(--muted);margin:10px 0 0}
     .formRow{display:grid;grid-template-columns:1fr 1fr;gap:10px}
     @media (max-width: 700px){ .formRow{grid-template-columns:1fr} }
+    @media (max-width: 900px){ input, textarea, select, button { font-size: 16px;} }
     label{display:block;font-size:12px;color:var(--muted);margin:10px 0 6px}
     input, textarea, select{
       width:100%;padding:12px 12px;border-radius:14px;
