add qa and frontend into lead

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <article class="card">
           <h1>Tvoj zadnji CV. Prolaziš i HR i tehnički intervju.</h1>
           <p class="lead">
-            Sređujem ili pišem tvoj <strong>CV</strong> i <strong>LinkedIn</strong>, i spremam te za selekcije:
+            Sređujem ili pišem tvoj <strong>CV</strong> i <strong>LinkedIn</strong>, i spremam te za QA/Frontend selekcije:
             realni taskovi, pitanja i <strong>mock intervju</strong>.
           </p>
           <p class="lead">Brzo. Jasno. No bullshit.</p>
